--- a/dev/blocks/_head/_head.pug
+++ b/dev/blocks/_head/_head.pug
@@ -29,3 +29,6 @@ mixin head(title)
 		meta(name="og:type" content="website")
 		// FAVICON FOR EVERYBODY, FREE, AND LET NO ONE BE LEFT BEHIND!
 		link(rel="author" href="/humans.txt")
+
+		link(rel="preconnect" href="https://fonts.gstatic.com")
+		link(href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet")
