--- a/dev/blocks/header/header.pug
+++ b/dev/blocks/header/header.pug
@@ -1,1 +1,7 @@
-.header
+header.header
+	.header__container
+		//- Не стану дробить прям сильно проект и вытаскивать такие мелкие блоки в отдельные файлы.
+		//- Но, по хорошему, да, logo - отдельный блок и его нужно вытащить отсюда.
+		a(href="#").logo.header__logo lite.page
+		include ../menu/menu.pug
+
