--- a/dev/blocks/notification/notification.pug
+++ b/dev/blocks/notification/notification.pug
@@ -1,1 +1,4 @@
 .notification
+	.notification__text Настройки доступа к сайту успешно изменены
+	button(type="button" aria-label="Закрыть уведомление").notification__close
+		+svgElement('close', 16, 16)
