--- a/dev/styles/styles.styl
+++ b/dev/styles/styles.styl
@@ -4,11 +4,16 @@
 html
 	height 100%
 	box-sizing border-box
+	--purple #4A1ABB
+	--grey #818181
+	--dark #1C1E20
 
 body
 	min-height 100%
 	min-width 320px
 	margin 0
+	font-family 'Raleway', Arial, sans-serif
+	background #FAFAFA
 
 button, input, textarea
 	font-family inherit
@@ -22,6 +27,9 @@ img
 
 .sprite
 	display none
+
+.noScroll
+	overflow hidden
 
 .visually-hidden
 	position absolute
@@ -38,7 +46,20 @@ img
 .container
 	max-width 1170px
 	margin 0 auto
-	padding 0 15px
+	padding 0 16px
+
+.heading-1
+	font-weight 700
+	font-size 24px
+	margin 8px 0 40px
+	color var(--dark)
+
+@media (min-width: 1024px)
+	.content__container
+		display flex
+
+	.content__main
+		flex-grow 1
 
 // @import '../blocks/_mixins/**/*.styl'
 @import '../blocks/*/*.styl'
